Přidán soubor index.html
Vytvoření nového projektu a přidání paragraphs.

--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
     <body>
         <p>Text na stránce</p>
         <p>Nový text na stránce</p>
+        <p>Nový text na stránce</p>
+        <p>Nový text na stránce</p>
     </body>
 </html>
